Data Fitting(Over Sampling ,UnderSampling)

--- a/Project_dir/code/app/05_KNN_Pavan_Satyam.ipynb
+++ b/Project_dir/code/app/05_KNN_Pavan_Satyam.ipynb
@@ -1627,6 +1627,157 @@
       "source": [
         "!pip install imbalanced-learn"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Data Fitting"
+      ],
+      "metadata": {
+        "id": "q1WfPBBFHKgZ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "pvr0S_sJtfuH"
+      },
+      "outputs": [],
+      "source": [
+        "from imblearn.over_sampling import RandomOverSampler, SMOTE\n",
+        "from imblearn.under_sampling import RandomUnderSampler, NearMiss\n",
+        "from collections import Counter"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "vWO5CUhFtfwr"
+      },
+      "outputs": [],
+      "source": [
+        "from sklearn.model_selection import cross_val_score\n",
+        "from scipy.sparse import hstack\n",
+        "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+        "\n",
+        "whole_text = reviews_df['full_review']\n",
+        "train_text = reviews_df['full_review']\n",
+        "y_ratings = reviews_df['reviews.rating']"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "t4v9u7aFtfz1"
+      },
+      "outputs": [],
+      "source": [
+        "word_vec = TfidfVectorizer(sublinear_tf = True, strip_accents = 'unicode', analyzer = 'word', token_pattern = r'\\w{1,}', stop_words = 'english', ngram_range = (1, 1), max_features=10000)\n",
+        "word_vec.fit(whole_text)\n",
+        "train_features = word_vec.transform(train_text)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XufZwvv1vlKx",
+        "outputId": "b5c2396b-8be2-4de6-a13c-e63eec88e684"
+      },
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<76909x10000 sparse matrix of type '<class 'numpy.float64'>'\n",
+              "\twith 1251842 stored elements in Compressed Sparse Row format>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 36
+        }
+      ],
+      "source": [
+        "train_features"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Undersampling"
+      ],
+      "metadata": {
+        "id": "iHYpwL19Hg9V"
+      }
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "BGa6K4PfvwMH"
+      },
+      "outputs": [],
+      "source": [
+        "\n",
+        "\n",
+        "nm = NearMiss()\n",
+        "X_undersample, y_undersample = nm.fit_resample(train_features, y_ratings)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Oversampling\n"
+      ],
+      "metadata": {
+        "id": "bNgkKWN3HmO2"
+      }
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "tdbTt1Fav2Cc"
+      },
+      "outputs": [],
+      "source": [
+        "\n",
+        "\n",
+        "smote = SMOTE(random_state=42)\n",
+        "X_oversample, y_oversample= smote.fit_resample(train_features, y_ratings)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xyIgRpYBwR6k",
+        "outputId": "e147d9a8-3771-46c7-c77c-c6fa08faef9f"
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Original dataset shape Counter({5.0: 50041, 4.0: 16101, 3.0: 4743, 1.0: 3990, 2.0: 2034})\n",
+            "Undersampled dataset shape Counter({1.0: 2034, 2.0: 2034, 3.0: 2034, 4.0: 2034, 5.0: 2034})\n",
+            "Oversampled dataset shape Counter({5.0: 50041, 1.0: 50041, 4.0: 50041, 3.0: 50041, 2.0: 50041})\n"
+          ]
+        }
+      ],
+      "source": [
+        "print('Original dataset shape %s' % Counter(y_ratings))\n",
+        "print('Oversampled dataset shape %s' % Counter(y_oversample))"
+      ]
     }
   ],
   "metadata": {
