Tested on some cases

--- a/Project_dir/code/app/05_KNN_Pavan_Satyam.ipynb
+++ b/Project_dir/code/app/05_KNN_Pavan_Satyam.ipynb
@@ -2097,6 +2097,52 @@
         "print(\"\\nLog loss for oversampled data on KNeighborsClassifier\")\n",
         "print(log_loss(y_test_os, probas2))"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "pQa9KjveudrP"
+      },
+      "source": [
+        "#Test cases"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "ODLEbeTVubPP"
+      },
+      "outputs": [],
+      "source": [
+        "custom_test = word_vec.transform([\"so satisfied with the purchase good product works well\", \"this device feels ok it works fine\", \"really disappointed with the purchase defective product not working\", \"used to be good but since the change the worst product ever\", \"used to be bad but from when it was updated it is the best product ever\"])"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0weluOlo-w17",
+        "outputId": "bf8ab366-6813-48a2-8ccf-a032b04af0ca"
+      },
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([4., 3., 2., 1., 2.])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 51
+        }
+      ],
+      "source": [
+        "kn_os.predict(custom_test)"
+      ]
     }
   ],
   "metadata": {
